fix: adjust font sizes for body, h1, h2, and h3 to improve readabilty by screen size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@
 body {
   font-family: "Source Sans 3", Arial, sans-serif;
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: var(--dark-700);
 }
 
@@ -52,7 +52,7 @@ body {
 /* MetaEthics brand styles */
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   line-height: 1.15;
   color: var(--light-50);
 }
@@ -65,6 +65,14 @@ h6 {
   font-family: "Montserrat", Helvetica, sans-serif;
   font-weight: 600;
   color: var(--blue-900);
+}
+
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1.5rem
 }
 
 section.content {
@@ -155,12 +163,6 @@ nav {
 
 main {
   margin-top: 105px;
-}
-
-@media only screen and (min-width: 263px) {
-  main {
-    margin-top: 66px;
-  }
 }
 
 main > header {
@@ -270,4 +272,36 @@ footer a {
 .inverse-style .list-group-item a:hover,
 .inverse-style .list-group-item a:focus {
   color: var(--teal-500);
+}
+
+/* Media queries */
+
+@media only screen and (min-width: 263px) {
+  /* Styles for screens 263px and above */
+
+  /* Site header */
+  main {
+    margin-top: 66px;
+  }
+}
+
+@media (min-width: 768px) {
+  /* Styles for screens 768px and above */
+
+  body {
+    font-size: 1.5rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.75rem;
+  }
+
 }
